--- a/PdfToXml/appsettings.json
+++ b/PdfToXml/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=PdfToXml;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=.;Database=PdfToXml;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=tcp:pdftoxml.database.windows.net,1433;Initial Catalog=pdftoxml;Persist Security Info=False;User ID=fiverr2023;Password=Admin202302;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +9,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "environmentVariables": {
+    "ASPNETCORE_ENVIRONMENT": "Production"
+  }
 }
